# Cargo.toml
[package]
name = "bft-basic-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
config = "0.14"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
anyhow = "1"

